--- a/package.json
+++ b/package.json
@@ -1,33 +1,104 @@
 {
-  "name": "messenger-bot",
+  "name": "chatbot-main",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "dependencies": {
+    "abort-controller": "^3.0.0",
+    "accepts": "^1.3.8",
+    "agentkeepalive": "^4.6.0",
+    "array-flatten": "^1.1.1",
+    "asynckit": "^0.4.0",
+    "axios": "^1.9.0",
+    "body-parser": "^1.20.3",
+    "bytes": "^3.1.2",
+    "call-bind-apply-helpers": "^1.0.2",
+    "call-bound": "^1.0.4",
+    "combined-stream": "^1.0.8",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.7.1",
+    "cookie-signature": "^1.0.6",
+    "debug": "^2.6.9",
+    "delayed-stream": "^1.0.0",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "dotenv": "^16.5.0",
+    "dunder-proto": "^1.0.1",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^2.0.0",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "es-set-tostringtag": "^2.1.0",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "event-target-shim": "^5.0.1",
+    "express": "^4.21.2",
+    "finalhandler": "^1.3.1",
+    "follow-redirects": "^1.15.9",
+    "form-data": "^4.0.2",
+    "form-data-encoder": "^1.7.2",
+    "formdata-node": "^4.4.1",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "function-bind": "^1.1.2",
+    "get-intrinsic": "^1.3.0",
+    "get-proto": "^1.0.1",
+    "gopd": "^1.2.0",
+    "has-symbols": "^1.1.0",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "http-errors": "^2.0.0",
+    "humanize-ms": "^1.2.1",
+    "iconv-lite": "^0.4.24",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "math-intrinsics": "^1.1.0",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.3",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "node-domexception": "^1.0.0",
+    "node-fetch": "^2.7.0",
+    "object-inspect": "^1.13.4",
+    "on-finished": "^2.4.1",
+    "openai": "^4.103.0",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.12",
+    "proxy-addr": "^2.0.7",
+    "proxy-from-env": "^1.1.0",
+    "qs": "^6.13.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.2",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "send": "^0.19.0",
+    "serve-static": "^1.16.2",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "side-channel-weakmap": "^1.0.2",
+    "statuses": "^2.0.1",
+    "toidentifier": "^1.0.1",
+    "tr46": "^0.0.3",
+    "type-is": "^1.6.18",
+    "undici-types": "^5.26.5",
+    "unpipe": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "webidl-conversions": "^3.0.1",
+    "whatwg-url": "^5.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-<<<<<<< HEAD
-<<<<<<< HEAD
-    "axios": "^1.8.2",
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "openai": "^4.27.0"
-=======
-=======
->>>>>>> ff8caf32d6779d6a183ce7bc1062938403c30eee
-    "axios": "^1.9.0",
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "openai": "^4.103.0"
-<<<<<<< HEAD
->>>>>>> ff8caf3 (chatbotruts1.1.3)
-=======
->>>>>>> ff8caf32d6779d6a183ce7bc1062938403c30eee
-  }
+  "description": ""
 }
